Fix compilation issue for PR #17535 during backport (#17546)
Signed-off-by: Ashish Singh <ssashish@amazon.com>